// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GetLabelledStringPropertyCardRow renders null when property data is <> 1`] = `<DocumentFragment />`;

exports[`GetLabelledStringPropertyCardRow renders null when property data is <null> 1`] = `<DocumentFragment />`;

exports[`GetLabelledStringPropertyCardRow renders null when property data is <undefined> 1`] = `<DocumentFragment />`;

exports[`GetLabelledStringPropertyCardRow renders with appropriate label/propertyData and contentClassName 1`] = `
<DocumentFragment>
  <mock-simplecardrow
    content="some string as propertyData"
    contentclassname="test class name"
    label="some label"
    rowkey="some label-22"
  />
</DocumentFragment>
`;

exports[`GetLabelledStringPropertyCardRow renders with appropriate label/propertyData without contentClassName 1`] = `
<DocumentFragment>
  <mock-simplecardrow
    content="some string as propertyData"
    label="some label"
    rowkey="some label-22"
  />
</DocumentFragment>
`;
